# distro-info-rs

./: .clog.toml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  changelog.md
.github/workflows/: rust.yml
binaries/: Cargo.toml
binaries/src/: lib.rs
src/: distro_release.rs  lib.rs
tests/: 01-ignore-stderr-for-failures.patch  02-dont-test-help.patch  03-debian-dont-test-alias.patch  Makefile  test-ubuntu-distro-info
ubuntu-distro-info/: Cargo.toml
ubuntu-distro-info/src/: lib.rs  main.rs
