[package]
name = "distro-info"
description = "Library for parsing Debian/Ubuntu distro-info-data"
version = "0.3.0"
authors = ["Daniel Watkins <daniel@daniel-watkins.co.uk>"]
license = "GPL-3.0"
homepage = "https://github.com/OddBloke/distro-info-rs/tree/master"

[workspace]
members = [
    "ubuntu-distro-info",
]

[dependencies]
chrono = "0.4.3"
csv = "1"
failure = "0.1.1"
