[package]
name = "distro-info"
edition = "2021"
description = "Library for parsing Debian/Ubuntu distro-info-data"
version = "0.4.0"
authors = ["Daniel Watkins <daniel@daniel-watkins.co.uk>"]
license = "GPL-3.0"
homepage = "https://github.com/OddBloke/distro-info-rs/tree/master"

[workspace]
members = [
    "binaries",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4.3"
csv = "1"
