[package]
name = "distro-info-binaries"
edition = "2021"
description = "Utilities for parsing distro-info-data"
version = "0.4.0"
authors = ["Daniel Watkins <daniel@daniel-watkins.co.uk>"]
license = "GPL-3.0"
homepage = "https://github.com/OddBloke/distro-info-rs/tree/master/binaries"

[dependencies]
anyhow = "1.0"
distro-info = { path = "../" }
chrono = "0.4.3"
clap = "2.31.2"
