[package]
name = "ubuntu-distro-info"
edition = "2021"
description = "Utility for parsing Ubuntu distro-info-data"
version = "0.3.0"
authors = ["Daniel Watkins <daniel@daniel-watkins.co.uk>"]
license = "GPL-3.0"
homepage = "https://github.com/OddBloke/distro-info-rs/tree/master/ubuntu-distro-info"

[dependencies]
distro-info = { path = "../" }
chrono = "0.4.3"
clap = "2.31.2"
failure = "0.1.1"
